# templatizer

./: .pylintrc  Pipfile  codecov.yml  setup.cfg
.github/workflows/: lint.yml  publish.yml  test.yml
examples/: configmap.py  deployment.py
scripts/: generate.py
templatizer/: __init__.py  emitter.py  run.py  templatable.py  util.py  yamlblob.py
templatizer/k8s/: __init__.py  base.py  gen.py
tests/: test_basic_k8s.py  test_imperative.py  test_multiple_docs.py  test_templatable.py  test_yaml_blob.py  utils.py
