[metadata]
name = templatize
version = 0.0.1
author = Matt Iselin
author_email = matthew@theiselins.net
description = A DSL for template generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    examples*
    scripts*
    tests*